--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a class="logo" href="index.html"><img src="img/logo.png" alt="logo"></a>
             <ul class="menu">
                 <li class="home"><a href="#">HOME</a></li>
-                <li class="prod"><a href="#">PRODUCTS</a></li>
+                <li class="prod"><a href="product.html">PRODUCTS</a></li>
                 <li class="his"><a href="#">HISTORY</a></li>
                 <li class="show"><a href="#">SHOWROOM</a></li>
                 <li class="con"><a href="#">CONTACT</a></li>
