Страница Products готова

--- a/product.html
+++ b/product.html
@@ -27,7 +27,77 @@
                <a href="#">MODERN</a>
                <a href="#">CLASSIC</a>
         </div>
+        <div class="block2_prod_produtcts">
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </div>
-    </div>
+        <div class="block_2">
+                <div class="block_2_sek_1">
+                    <span>exclusive</span>
+                    <span>Fishnet Chair</span>
+                    <span>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
+                    powder-coated black
+                    or highly polished chrome.</span>
+                    <div class="order">
+                    <a href="#">Order us</a>
+                    </div>
+                </div>
+                <div class="block_2_sek_2">
+                    <span>exclusive</span>
+                    <span>Fishnet Chair</span>
+                    <span>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt
+                    powder-coated black
+                    or highly polished chrome.</span>
+                    <div class="order">
+                    <a href="#">Order us</a>
+                    </div>
+                </div>
+                <div class="block_7">
+            <div>
+                <span>Contact Us</span>
+                <span>132A Bridge Road Richmond VIC Australia. <br> <br> Talk to us on 1300 <br> 132info@interior.com</span>
+            </div>
+            <div>
+                <span>Useful Information</span>
+                    <div class="bl7_foot1">
+                <a href="">Sales terms</a>
+                <a href="">Customer care</a>
+                <a href="">Delivery</a>
+                    </div>
+                    <div class="bl7_foot2">
+                <a href="">Architect accounts</a>
+                <a href="">Careers</a><br>
+                <a href=""> Exchanges & returns</a>
+                    </div>
+            </div>
+            <div>
+                <span>Let’s Stay in Touch!</span>
+                <span>Suscribe to know about our latest news, products and special offers just for suscribers.</span>
+                <input type="text" placeholder="         your email address">
+            </div>
+            <div>
+               <span>© Copyright - INTERIOR 2016. All Rights Reserved.</span> 
+               <a href="#">Terms & Conditions  /  Privacy policy & Cookies</a>
+               <a href="#"><img src="img/social-links.png" alt=""></a>
+        </div>
     </body>
 </html>
